<resources>
    <!--    <string name="app_name">JustWeddingPro</string>-->
    <string name="get_started_with_your_wonderful_journey">Get Started With Your\nWonderful Journey</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable">It is a long established fact that a reader will be distracted by the readable.</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="signIn">Sign in</string>
    <string name="Logintxt">Hey, Enter your details below to sign in and access your account securely and easily.</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="login_with_otp_instead"><u>Login with OTP instead</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="signin">Sign In</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_text">Please enter the one time password to verify your account.</string>
    <string name="otp_code">A code has been sent to ******gmail.com</string>
    <string name="verify_amp_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="forgottxt">Don\'t worry! It happens. Please enter the email address associated with your account</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="back_to_login">Back to login</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="login_with_email_instead"><u>Login with Email instead</u></string>
    <string name="send_your_otp">Send your OTP</string>
    <string name="signuptext">Please fill in all the information required to create your account on Just Wedding.</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email</string>
    <string name="company_address">Company Address</string>
    <string name="company_details">Company Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="already_have_on_account_sign_in">Already have on account? Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city_name">City Name</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="event">Events</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_details">Event Details</string>
    <string name="status">Status</string>
    <string name="select_date">Select Date</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">Event Name</string>
    <string name="your_event_name">Your event name</string>
    <string name="food_notes">Food Notes</string>
    <string name="food_note">Food note</string>
    <string name="event_remarks">Event Remarks</string>
    <string name="your_event_remarks">Your event remarks</string>
    <string name="venue_name">Venue Name</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="party_details">Party Details</string>
    <string name="party_name">Party Name</string>
    <string name="select_party_name">Select Party Name</string>
    <string name="party_address">Party Address</string>
    <string name="enter_party_address">Enter Party Address</string>
    <string name="party_contact_no">Party Contact No</string>
    <string name="function_details">Function Details</string>
    <string name="select_function">Select Function</string>
    <string name="function_name">Function Name</string>
    <string name="enter_function_name">Enter function name</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">DD MM YYYY</string>
    <string name="number_of_pax">Number of Pax</string>
    <string name="enter_number_of_pax">Enter number of pax</string>
    <string name="add">+ Add</string>
    <string name="cancel">Cancel</string>
    <string name="start_time">Start Time</string>
    <string name="hh_mm">HH:MM</string>
    <string name="end_time">End Time</string>
    <string name="added_functions">Added Functions</string>
    <string name="added_items">Added items</string>
    <string name="place_order">Place Order</string>
    <string name="clear_all">Clear all</string>
    <string name="nutrition_facts_per_serving"><![CDATA[Nutrition Facts (per serving)]]></string>
    <string name="dummytext_forItemDetails">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop.</string>
    <string name="select_status">Select status</string>


    <string name="client_id">Client Id</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="feedback_txt">We highly value your feedback! Kindly take a moment to rate your experience and provide us with your valuable insights.</string>
    <string name="worst">Worst</string>
    <string name="best">Best</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="your_mobile_number">Your mobile number?</string>
    <string name="what_s_your_city">What\'s your city?</string>
    <string name="what_s_your_instagram_id">What\'s your Instagram ID</string>
    <string name="instagram_id">Instagram ID</string>
    <string name="what_s_your_dob">What\'s your DOB</string>
    <string name="what_s_your_anniversary">What\'s your Anniversary</string>
    <string name="any_feedback_comments_or_concerns">Any feedback, comments, or concerns?</string>
    <string name="describe_your_experience_here">Describe your experience here...</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="quick_order">Quick Order</string>
    <string name="no_record_found">No Record Found!</string>
    <string name="save">Save</string>
    <string name="start_creating_a_manager">Start Creating a Manager</string>
    <string name="start_creating_a_captain">Start Creating a Captain</string>
    <string name="hey_welcome_and_thank_you_for_checking_out_our_application">Hey! Welcome and Thank You for Checking Out Our Application.</string>
    <string name="manager_name">Manager Name</string>
    <string name="manager_age">Manager Age</string>
    <string name="manager_phone_number">Manager Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="roll">Roll</string>
    <string name="manager_email_address">Manager Email Address</string>
    <string name="submit">Submit</string>
    <string name="upload_your_document_here">Upload your document here</string>
    <string name="max_file_size_15mb">Max. file size 15MB</string>
    <string name="select_documents">Select Documents</string>
    <string name="company_email_address">Company Email Address</string>
    <string name="delete_account">Delete Account</string>
    <string name="plan_you_wedding_events_easily">Plan You Wedding Events Easily</string>
    <string name="easily_plan_your_dream_wedding">Easily plan your dream wedding</string>
    <string name="get_started_today"><u>Get Started Today!</u></string>
    <string name="add_new_item">Add new item</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Item description</string>
    <string name="select_category">Select category</string>
    <string name="function_appear_heren">Function appear heren</string>
    <string name="header_title">Header Title</string>
    <string name="manager">Managers</string>
    <string name="Captain">Captain</string>
    <string name="assign">Assign</string>
    <string name="tables">Tables</string>
    <string name="tables_view">Tables View</string>
    <string name="menu_planning">Menu Planning</string>
    <string name="function">Function</string>
    <string name="download">Download</string>
    <string name="add_category">Add Category</string>
    <string name="cat_language">Category Language</string>
    <string name="category_slogan">Category Slogan</string>
    <string name="add_table">Add Table</string>
    <string name="table_name">Table Name</string>
    <string name="birthdate">BirthDate</string>
    <string name="anniversarydate">anniversarydate</string>
    <string name="bride_and_groom_details">Bride and Groom Details</string>
    <string name="bride_name">Bride Name</string>
    <string name="groom_name">Groom Name</string>
    <string name="add_event">+ Add Event</string>
    <string name="captain_name">Captain name</string>
    <string name="captain_age">Captain age</string>
    <string name="captain_phone_number">Captain phone number</string>
    <string name="captain_email_address">Captain email address</string>


    <string-array name="array_name">
        <item>Select status</item>
        <item>inquiry</item>
        <item>Confirm</item>
        <item>Cancel</item>
    </string-array>


</resources>