<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/events_icon"
        android:title="@string/event"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_planning"
        android:icon="@drawable/profile_icons"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/menu_icon"
        android:title="@string/menu"
        app:showAsAction="ifRoom" />

</menu>