<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/headerview"
            layout="@layout/header_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerview"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_variable"
                android:text="Login with OTP instead"
                android:textSize="@dimen/Large_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_variable"
                android:text="@string/forgottxt"
                android:textColor="#232323"
                android:textSize="@dimen/small_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/nunito_variable_italic"
                    android:hint="@string/enter_phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColorHint="@color/hint_color"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_variable"
                android:text="@string/login_with_email_instead"
                android:textSize="@dimen/medium_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/nunito_variable"
                android:text="@string/send_your_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_variable"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>

    </RelativeLayout>

</layout>